[package]
name = "fuzzcheck_proc_macro2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzcheck = { path = "/Users/loic/Code/fuzzcheck-rs/fuzzcheck", version = "0.11", default_features = false }
proc-macro2 = "1.0.36"
serde = { version = "1.0.136", features = ["derive"] }
unicode-xid = "0.2.2"
