[package]
name = "fuzzcheck_proc_macro2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzcheck = { git = "https://github.com/loiclec/fuzzcheck-rs", default_features = false }
proc-macro2 = "1.0.36"